# knowrob_moveit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/knowrob_moveit/: knowrob_moveit.hpp  planning_scene.hpp  planning_scene_server.hpp  utils.hpp
knowrob_moveit/: CMakeLists.txt  package.xml
knowrob_moveit/include/knowrob_moveit/: collision_checking.hpp  knowrob_moveit.hpp
knowrob_moveit/launch/: planning_scene.launch
knowrob_moveit/src/knowrob_moveit/: collision_checker_node.cpp
knowrob_moveit_collision_checker/: CMakeLists.txt  package.xml
knowrob_moveit_core/: CMakeLists.txt  LICENSE  package.xml
knowrob_moveit_core/include/knowrob_moveit_core/: knowrob_moveit_core.hpp  planning_scene.hpp  planning_scene_server.hpp  utils.hpp
knowrob_moveit_core/launch/: planning_scene.launch
knowrob_moveit_core/scripts/: call_collision_check.py
knowrob_moveit_core/src/knowrob_moveit_core/: planning_scene_client.cpp  planning_scene_node.cpp  planning_scene_server.cpp
knowrob_moveit_core/srv/: CheckCollisions.srv
knowrob_moveit_msgs/: CMakeLists.txt  package.xml
knowrob_moveit_msgs/srv/: CheckCollisions.srv
launch/: planning_scene.launch
msg/: ContactList.msg
src/knowrob_moveit/: contact_marker_visualizer.cpp  contact_marker_visualizer.py  planning_scene_client.cpp  planning_scene_client.py  planning_scene_server.cpp
srv/: CheckCollisions.srv  UInt64Trigger.srv
test_data/: collision_free_config.yaml  pr2.srdf  start_config.yaml
