<?xml version="1.0"?>
<package format="2">
  <name>knowrob_moveit</name>
  <version>0.0.1</version>
  <description>
    Wraps the various capabilities of MoveIt from the package moveit_core for KnowRob.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>moveit_core</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>moveit_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
