<?xml version="1.0"?>
<package format="2">
  <name>knowrob_moveit_collision_checker</name>
  <version>0.0.1</version>
  <description>
    Wraps the collision checking capabilities of MoveIt for KnowRob.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
