<?xml version="1.0"?>
<package format="2">
  <name>knowrob_moveit_msgs</name>
  <version>0.0.1</version>
  <description>
    A set of messages to expose MoveIt functionality to the Knowrob system.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_msgs</depend>

  <export>
  </export>
</package>
